--- a/Pages/Books/Edit.cshtml
+++ b/Pages/Books/Edit.cshtml
@@ -1,4 +1,80 @@
-﻿@page
+﻿using Herembas_Timotei_Lab2.Models;
+namespace Herembas_Timotei_Lab2.Pages.Books
+{
+ public class EditModel : BookCategoriesPageModel
+ {
+ private readonly Herembas_Timotei_Lab2.Data.Herembas_Timotei_Lab2Context _context;
+ public EditModel(Herembas_Timotei_Lab2.Data.Herembas_Timotei_Lab2Context context)
+ {
+ _context = context;
+ }
+ [BindProperty]
+ public Book Book { get; set; }
+ public async Task<IActionResult> OnGetAsync(int? id)
+ {
+ if (id == null)
+ {
+ return NotFound();
+ }
+ Book = await _context.Book
+ .Include(b => b.Publisher)
+ .Include(b => b.BookCategories).ThenInclude(b => b.Category)
+ .AsNoTracking()
+ .FirstOrDefaultAsync(m => m.ID == id);
+ if (Book == null)
+ {
+ return NotFound();
+ }
+//apelam PopulateAssignedCategoryData pentru o obtine informatiile necesare checkbox-
+//urilor folosind clasa AssignedCategoryData
+PopulateAssignedCategoryData(_context, Book);
+ var authorList = _context.Author.Select(x => new
+ {
+ x.ID,
+ FullName = x.LastName + " " + x.FirstName
+ });
+ ViewData["AuthorID"] = new SelectList(authorList, "ID", "FullName");
+ ViewData["PublisherID"] = new SelectList(_context.Publisher, "ID",
+"PublisherName");
+ return Page();
+ }
+
+ public async Task<IActionResult> OnPostAsync(int? id, string[]
+selectedCategories)
+ {
+ if (id == null)
+ {
+ return NotFound();
+ }
+ var bookToUpdate = await _context.Book
+ .Include(i => i.Publisher)
+ .Include(i => i.BookCategories)
+ .ThenInclude(i => i.Category)
+ .FirstOrDefaultAsync(s => s.ID == id);
+ if (bookToUpdate == null)
+ {
+ return NotFound();
+ }
+ if (await TryUpdateModelAsync<Book>(
+ bookToUpdate,
+ "Book",
+ i => i.Title, i => i.Author,
+ i => i.Price, i => i.PublishingDate, i => i.Publisher))
+ {
+ UpdateBookCategories(_context, selectedCategories, bookToUpdate);
+ await _context.SaveChangesAsync();
+ return RedirectToPage("./Index");
+ }
+//Apelam UpdateBookCategories pentru a aplica informatiile din checkboxuri la entitatea Books care
+//este editata
+ UpdateBookCategories(_context, selectedCategories, bookToUpdate);
+ PopulateAssignedCategoryData(_context, bookToUpdate);
+ return Page();
+ }
+ }
+}
+
+@page
 @model Herembas_Timotei_Lab2.Pages.Books.EditModel
 
 @{
@@ -41,16 +117,31 @@
                 <span asp-validation-for="Book.PublisherID" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-            </div>
-        </form>
-    </div>
-</div>
-
-<div>
-    <a asp-page="./Index">Back to List</a>
-</div>
-
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+ <div class="table">
+ <table>
+ <tr>
+ @{
+ int cnt = 0;
+ foreach (var cat in Model.AssignedCategoryDataList)
+{
+ if (cnt++ % 3 == 0)
+{
+@:</tr><tr>
 }
+@:<td>
+ <input type="checkbox"
+ name="selectedCategories"
+ value="@cat.CategoryID"
+ @(Html.Raw(cat.Assigned ?
+"checked=\"checked\"" : "")) />
+ @cat.CategoryID @: @cat.Name
+ @:</td>
+ }
+ @:</tr>
+}
+ </table>
+ </div>
+ </div>
+ <div class="form-group">
+ <input type="submit" value="Save" class="btn btn-primary" />
+ </div>
