--- a/Pages/Books/Index.cshtml
+++ b/Pages/Books/Index.cshtml
@@ -9,6 +9,9 @@ public IList<Book>
     public BookData BookD { get; set; }
     public int BookID { get; set; }
     public int CategoryID { get; set; }
+
+    public string TitleSort { get; set; }
+ public string AuthorSort { get; set; }
     public async Task OnGetAsync(int? id, int? categoryID)
     {
     BookD = new BookData();
@@ -35,11 +38,24 @@ public IList<Book>
 <p>
     <a asp-page="Create">Create New</a>
 </p>
+
+<form asp-page="./Index" method="get">
+ <div class="form-actions no-color">
+ <p>
+ Find by Book Title / Author Name:
+ <input type="text" name="SearchString" value="@Model.CurrentFilter" />
+                <input type="submit" value="Search" class="btn btn-primary" /> |
+                <a asp-page="./Index">Back to full List</a>
+            </p>
+        </div>
+    </form>
 <table class="table">
     <thead>
         <tr>
             <th>
+                <a asp-page="./Index" asp-route-sortOrder="@Model.TitleSort">
                 @Html.DisplayNameFor(model => model.Book[0].Title)
+                </a>
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Book[0].Author)
@@ -50,8 +66,10 @@ public IList<Book>
             <th>
                 @Html.DisplayNameFor(model => model.Book[0].PublishingDate)
             </th>
-            <th>
+            <th colspan="2">
+                <a asp-page="./Index" asp-route-sortOrder="@Model.AuthorSort">
                 @Html.DisplayNameFor(model => model.Book[0].Publisher.PublisherName)
+                </a>
             </th>
                 <th>
                     @Html.DisplayNameFor(model => model.Book[0].BookCategories)
